scrollbar fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,11 @@ body {
   font-family: "Courier New";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 code {
